<resources>
    <string name="app_name">ProductDesignMobile</string>

    <string name="loginTextViewGuide">(use testi2/salasana or t5vahe01 and no password to login)</string>
    <string name="loginButtonLogin">Login</string>
    <string name="loginTextViewPassword">Password</string>
    <string name="loginTextViewUsername">Username</string>
    <string name="loginTextViewSignUp">Register here.</string>
    <string name="loginButtonSignUp">Sign up</string>
    <string name="loginStatusConnecting">Connecting to database</string>
    <string name="loginStatusConnectionSuccessful">Connection successful</string>
    <string name="loginStatusConnectionFailed">Connection failed</string>
    <string name="loginStatusRetrievingUserData">Retrieving user data</string>
    <string name="loginStatusWrongCredentials">Wrong username/email or password</string>

    <string name="signUpTextViewHeader">Sign Up</string>
    <string name="signUpHintFirstName">First name</string>
    <string name="signUpHintLastName">Last name</string>
    <string name="signUpHintEmail">Email</string>
    <string name="signUpHintPassword">Password</string>
    <string name="signUpButtonSignUp">Sign Up</string>

    <string name="homeTextViewHeader">Home Screen</string>

    <string name="menuHome">Home</string>
    <string name="menuProfileSettings">Profile Settings</string>
    <string name="menuDisplaySettings">Display Settings</string>
    <string name="menuLogout">Logout</string>

    <string name="profileSettingsHeader">Profile Settings</string>

    <string name="profileFirstName">First Name</string>
    <string name="profileLastName">Last Name</string>
    <string name="profileEmail">Email</string>
    <string name="profileGender">Gender</string>
    <string name="profileLanguage">Language</string>
    <string name="profileGroupID">Group ID</string>

    <string name="profileButtonUpdateData">Save changes</string>
    <string name="profileButtonChangeDietary">Change dietary settings</string>
    <string name="profileButtonAddPicture">Add profile picture</string>

    <string name="profileDietaryGlutenFree">Gluten Free</string>
    <string name="profileDietaryVegan">Vegan</string>
    <string name="profileDietaryMilkless">Milkless</string>
    <string name="profileDietaryFeelWell">Feel Well</string>
    <string name="profileDietaryLactoseFree">Lactose Free</string>
    <string name="profileDietaryLowLactose">Low Lactose</string>
    <string name="profileDietaryGarlic">Includes garlic</string>
    <string name="profileDietaryAllergen">Includes allergens</string>
    <string name="profileDietarySaveButton">Save dietary settings</string>

    <string name="photoTextViewHeader">Photo Options</string>

    <string name="displayTextViewHeader">Display Settings</string>
    <string name="displayShowCalendar">Show Calendar</string>
    <string name="displayShowFoodMenu">Show Food Menu</string>

    <string name="pictureSaveButton">Save Changes</string>

    <string name="homeGuide">Hello</string>

    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="language_array">
        <item>English</item>
        <item>Finnish</item>
    </string-array>

    <string name="noCameraAvailable">Your device does not have a camera!</string>
</resources>
