<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPalettonPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/signUpEditTextFirstName"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/signUpHintFirstName"/>

    <EditText
        android:id="@+id/signUpEditTextLastName"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/signUpEditTextFirstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:hint="@string/signUpHintLastName"/>

    <EditText
        android:id="@+id/signUpEditTextEmail"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/signUpEditTextLastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:hint="@string/signUpHintEmail"/>

    <EditText
        android:id="@+id/signUpEditTextPassword"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/signUpEditTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:hint="@string/signUpHintPassword"/>

    <Button
        android:id="@+id/signUpButtonSignUp"
        android:background="@drawable/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/signUpEditTextPassword"
        android:layout_marginTop="10dp"
        android:text="@string/signUpButtonSignUp"
        android:textColor="@color/white"/>

</RelativeLayout>